--- a/contentadmin/package.json
+++ b/contentadmin/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
+  "dev": "next dev --port 3002 --turbopack",
+  "build": "next build",
+  "start": "next start -p 3002",
+  "lint": "eslint"
+},
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
