--- a/tbarimt/package.json
+++ b/tbarimt/package.json
@@ -15,7 +15,8 @@
     "next": "13.5.11",
     "qrcode.react": "^4.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
