--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
